--- a/TP1/EntregaFinal/custom.css
+++ b/TP1/EntregaFinal/custom.css
@@ -4,18 +4,21 @@ body{
 }
 
 h1{
-    font-size: 60px;
+    font-size: 40px;
     color:#ffffff;
     text-align: center;
     height:60px;
+    margin: 30px;
 }
 
 h2{
-    font-size: 20px;
-    color:#ffffff;
+    font-size: 18px;
+    font-style: italic;
+    color:#000  ;
     text-align: center;
     height:60px;
-
+    margin: 30px;
+    padding: 30px;
 }
 
 /* canvas */
