mejorando el conteo de movimientos y regitros de recors

--- a/TP2/EntregaFinal/css/hanoi.css
+++ b/TP2/EntregaFinal/css/hanoi.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Monoton|Orbitron');
 body{
-
+  background: url('http://imagenesgratis.com.es/wp-content/uploads/2015/08/Free-Beach-Wallpaper-for-Iphone-2-For-Desktop-Background.jpg');
 }
 
 h1,h2,h3,h4{
