--- a/TP2/EntregaFinal/css/hanoi.css
+++ b/TP2/EntregaFinal/css/hanoi.css
@@ -3,6 +3,7 @@ body{
   background: url('http://imagenesgratis.com.es/wp-content/uploads/2015/08/Free-Beach-Wallpaper-for-Iphone-2-For-Desktop-Background.jpg');
 }
 
+
 h1,h2,h3,h4{
     color:#000;
     font-weight:100;
@@ -17,3 +18,5 @@ h1,h2,h3,h4{
   background-image: url("../img/bg.jpg");
   background-size:100% auto;
 }
+
+.container{ margin-left: 0px;}
