--- a/TP4/EntregaFinal/css/style.css
+++ b/TP4/EntregaFinal/css/style.css
@@ -1,20 +1,64 @@
+body{
+  z-index:10;
+  background-image: url("../image/PARALLAX/layer_01.png");
+  background-repeat:no-repeat; /* Indicamos que no se repetira */
+  background-size:cover; /* Encajamos la imagen al 100% del ancho */
+  background-attachment: fixed; /* Establecemos una posicion fija para la imagen */
+  background-repeat:repeat-x;
+ }
 
-main{
+.nubes{
+position:absolute;
+z-index:11;
+background:transparent url("../image/PARALLAX/layer_02.png") 100% ;
+margin:0;
+padding:0;
+width:100%;
+height:100%;
+animation: ARBOL-GAME 124s steps(8, end) infinite;
+}
 
+.montanias{
+position:absolute;
+z-index:12;
+background:transparent url("../image/PARALLAX/layer_03.png") 100% ;
+margin:0;
+padding:0;
+width:100%;
+height:100%;
+animation: ARBOL-GAME 44s steps(8, end) infinite;
+}
+
+.arboles{
+   position:absolute;
+   z-index:13;
+   background:transparent url("../image/PARALLAX/layer_04.png") 100% ;
+   margin:0;
+   padding:0;
+   width:100%;
+   height:100%;
+   animation: ARBOL-GAME 19s steps(8, end) infinite;
+}
+
+.piso{
+   position:absolute;
+   z-index:14;
+   background:transparent url("../image/PARALLAX/layer_05.png") 100%;
+   margin:0;
+   padding:0;
+   width:100%;
+   height:100%;
+   animation: PISO-GAME .8s steps(8, end) infinite;
 }
 
 .runner{
-   width: 280px;
-   height: 346px;
-   margin-left: 50px;
-   background-image: url("../image/WalkingManSpriteSheet.png");
+   width: 63px;
+   height: 150px;
+   margin-left: 150px;
+   background:transparent url("../image/personaje.png") 100%;
+   background-size: cover;
    background-repeat: no-repeat;
    animation: RUNNER .8s steps(8, end) infinite;
-   margin-top: 180px;
-}
-
-body{
-  background-image: url("https://chupacdn.s3.amazonaws.com/catalog/product/cache/4/thumbnail/1280x/17f82f742ffe127f42dca9de82fb58b1/2/d/2d-game-backgrounds-10024_imgs_10024_1.jpg");
-  background-repeat:repeat-x;
-  animation: BACKGROUND-GAME .8s steps(8, end) infinite;
-}
+   margin-top: 390px;
+   position:absolute;
+   }
