--- a/TP4/EntregaFinal/css/keyframes.css
+++ b/TP4/EntregaFinal/css/keyframes.css
@@ -23,3 +23,19 @@
    from {background-position: 0px;}
    to {background-position: 1250px;}
 }
+
+@keyframes SPIN{
+    from {transform:rotate(0deg);}
+    to {transform:rotate(-360deg);}
+}
+
+@keyframes REBOTE{
+   0%, 20%, 60%, 100% {transform: translateY(0);}
+   40% {transform: translateY(-200px);}
+   80% {transform: translateY(-200px);}
+}
+
+@keyframes MISSES{
+   25%, 75% { opacity: 0; }
+   50% { opacity: 1; }
+}
