--- a/TP4/EntregaFinal/css/player.css
+++ b/TP4/EntregaFinal/css/player.css
@@ -1,10 +1,12 @@
 #runner {
-   width: 83px;
+   width: 63px;
    height: 128px;
-   margin-left: 150px;
-   margin-top: 415px;
-   background:transparent url("../image/reposo.png")80%;
-   background-repeat: no-repeat;
+   position: absolute;
+   top: 483px;
+   left: 150px;
+   background:transparent url("../image/esperar.png");
+   background-size: cover;
+   background-position: left;
 }
 .runner-jump{
   transform: translateY(-50px);
@@ -17,7 +19,9 @@
 
 .runner-stop{
   /*animation: RUNNER .8s steps(8, end) infinite;*/
-  background:transparent url("../image/reposo.png")80%;
+  background:transparent url("../image/esperar.png")80%;
+  background-size: cover;
+  background-position: center;
 }
 .runner-right{
   transform: translateX(20px);
