--- a/TP4/EntregaFinal/css/keyframes.css
+++ b/TP4/EntregaFinal/css/keyframes.css
@@ -38,9 +38,8 @@
 }
 
 @keyframes REBOTE{
-   0%, 20%, 60%, 100% {transform: translateY(0);}
-   40% {transform: translateY(-200px);}
-   80% {transform: translateY(-200px);}
+   0%, 100% {transform: translateY(0);}
+   50% {transform: translateY(-200px);}
 }
 
 @keyframes MISSES{
