--- a/TP4/EntregaFinal/css/enemy.css
+++ b/TP4/EntregaFinal/css/enemy.css
@@ -5,7 +5,7 @@
   border-radius: 100%;
   position: relative;
   z-index:20;
-  border: 1px solid;
+  /*border: 1px solid;*/
 }
 
 .rotar{
@@ -14,6 +14,14 @@
    background-size:cover;
    animation: SPIN 2s steps(10, end) infinite;
 }
+
+.volar{
+   background:url("../image/misil.png");
+   background-repeat: no-repeat;
+   animation: VOLAR .2s steps(4, end) infinite;
+}
+
+
 
 .saltar{
    background:url("../image/bomba.png");
@@ -24,9 +32,7 @@
 
 .explotion{
    background:url("../image/explosion.png");
-   background-size: cover;
-   background-position: left;
-   animation: EXPLOTION 1s steps(15, end);
+   animation: EXPLOTION .8s steps(12, end);
 }
 
 .oculto{
