--- a/TP4/EntregaFinal/css/game.css
+++ b/TP4/EntregaFinal/css/game.css
@@ -7,7 +7,7 @@ body{
   background-repeat:repeat-x;
   overflow: hidden;
  }
-header{ width: 100%; height: 20px; position:absolute;}
+header{ width: 100%; height: 20px; position:absolute; z-index: 800;}
 main{ width: 100%; height: 562px; margin: auto; position:absolute; top: 0px; left: auto;}
 footer{ position: absolute; top: 583px; left: 0; width: 100%; height: 20px;}
 
@@ -71,6 +71,7 @@ nav a{
    color: #000;
    font-family: 'Russo One', sans-serif;
    line-height: 30px;
+   cursor: none;
 }
 
 #vidas{}
@@ -84,23 +85,56 @@ footer{
 }
 
 .gameOver{
-   background-image: url("../image/gameover.png");
-   background-size:contain;
-   background-repeat: no-repeat;
-   background-position: top;
-   margin: 23%;
+   margin: 25%;
    margin-top: 10%;
    width: 50%;
    height: 50%;
    z-index: 680;
    position: absolute;
-   background-color: #ccc;
+   background: linear-gradient(orange, red);
+    border-radius: 80%;
+   font-family: 'Russo One', sans-serif;
 }
 
-.gameOver img{
-   margin-left: 40%;
-   margin-top: 29%;
+.gameOver h1{
+   width: 100%;
+   text-align: center;
+   margin-top: 10%;
    position: relative;
-   width: 120px;
+   font-size: 55px;
+   color: #A52A2A;
+
+}
+.gameOver ul{
+   margin-top: 70px;
+   margin-left: 10%;
+   width: 80%
+}
+
+.gameOver li{
+   width: 33%;
+   text-align: center;
+}
+
+.gameOver a{
+   font-size: 22px;
+   color: #000;
+}
+.gameOver a:hover{
+   color: #FFF;
+}
+
+.controles{
+   position: absolute;
+   top: 70%;
+   left:70%;
+   width: 20%;
+   height: 20%;
+   background-image:url('../image/flechas.png');
+   z-index: 690;
+   background-repeat: no-repeat;
+}
+
+#controles{
    cursor: pointer;
 }
