--- a/TP4/EntregaFinal/css/keyframes.css
+++ b/TP4/EntregaFinal/css/keyframes.css
@@ -24,8 +24,13 @@
 @keyframes RUNNER-DIE{
   from {background-position: 0px;}
   to {background-position: 1067px;}
-
 }
+
+@keyframes RUNNER-HURTS{
+  from {background-position: 0px;}
+  to {background-position: 654px;}
+}
+
 
 @keyframes ENEMY{
    from {background-position: 60px;}
@@ -42,12 +47,17 @@
    50% {transform: translateY(-200px);}
 }
 
+@keyframes VOLAR{
+   from {background-position: 0px;}
+   to {background-position: -240px;}
+}
+
 @keyframes MISSES{
    25%, 75% { opacity: 0; }
    50% { opacity: 1; }
 }
 
 @keyframes EXPLOTION{
-  from {background-position: 10px;}
-  to {background-position: -2200px;}
+  from {background-position: 0px;}
+  to {background-position: 720px;}
 }
