--- a/TP4/EntregaFinal/css/game.css
+++ b/TP4/EntregaFinal/css/game.css
@@ -9,7 +9,7 @@ body{
  }
 header{ width: 100%; height: 20px; position:absolute; z-index: 800;}
 main{ width: 100%; height: 562px; margin: auto; position:absolute; top: 0px; left: auto;}
-footer{ position: absolute; top: 583px; left: 0; width: 100%; height: 20px;}
+footer{ position: absolute; top: 583px; left: 0; width: 100%; height: 60px; padding-top: 20px;}
 
 
 .nubes{
